fix: loading component shifting issue due to gutters

--- a/src/app.css
+++ b/src/app.css
@@ -16,6 +16,7 @@
 
 html {
 	scroll-padding-top: 5rem;
+	scrollbar-gutter: stable;
 }
 
 ::selection {
